# nonlinear_optimizer_for_slam

./: CMakeLists.txt  ChanghyeonKim_SIMD_Helper.pptx  README.md
nonlinear_optimizer/: CMakeLists.txt  ceres_loss_function.h  loss_function.h  multi_thread_executor.h  options.h  simd_helper.cc  simd_helper.h  time_checker.cc  time_checker.h  types.h  unordered_bimap.h
nonlinear_optimizer/mahalanobis_distance_minimizer/: CMakeLists.txt  ceres_cost_functor.h  mahalanobis_distance_minimizer.cc  mahalanobis_distance_minimizer.h  mahalanobis_distance_minimizer_analytic.cc  mahalanobis_distance_minimizer_analytic.h  mahalanobis_distance_minimizer_analytic_3dof.cc  mahalanobis_distance_minimizer_analytic_3dof.h  mahalanobis_distance_minimizer_analytic_3dof_simd.cc  mahalanobis_distance_minimizer_analytic_3dof_simd.h  mahalanobis_distance_minimizer_analytic_simd.cc  mahalanobis_distance_minimizer_analytic_simd.h  mahalanobis_distance_minimizer_analytic_simd_various.cc  mahalanobis_distance_minimizer_analytic_simd_various.h  mahalanobis_distance_minimizer_ceres.cc  mahalanobis_distance_minimizer_ceres.h  types.h
nonlinear_optimizer/mahalanobis_distance_minimizer/tests/: 3dof_6dof_comparison_test.cc  simd_comparison_test.cc  simple_optimization_test.cc
nonlinear_optimizer/pose_graph_optimizer/: CMakeLists.txt  ceres_cost_functor.h  pose_graph_optimizer.h  pose_graph_optimizer_analytic.cc  pose_graph_optimizer_analytic.h  pose_graph_optimizer_ceres.cc  pose_graph_optimizer_ceres.h  types.h
nonlinear_optimizer/pose_graph_optimizer/tests/: simple_optimization_test.cc
nonlinear_optimizer/pose_optimizer/: CMakeLists.txt  cost_function.h  cost_functors.h  pose_optimizer.h  test.cc  types.h
nonlinear_optimizer/reprojection_error_minimizer/: CMakeLists.txt  ceres_cost_functor.h  reprojection_error_minimizer.h  reprojection_error_minimizer_analytic.cc  reprojection_error_minimizer_analytic.h  reprojection_error_minimizer_analytic_simd.cc  reprojection_error_minimizer_analytic_simd.h  reprojection_error_minimizer_ceres.cc  reprojection_error_minimizer_ceres.h  types.h
nonlinear_optimizer/reprojection_error_minimizer/tests/: simple_optimization_test.cc
nonlinear_optimizer/simd_helper/: simd_helper.h  simd_helper_amd.h  simd_helper_arm.h  simd_matrix.h  simd_vector.h
nonlinear_optimizer/simd_helper/v2/: simd_helper.h  simd_matrix.h
nonlinear_optimizer/simd_helper_v2/: CMakeLists.txt  simd_helper.h  simd_helper_v2_test.cc  simd_matrix.h  simd_scalar.h  simd_scalar_amd.h  simd_scalar_arm.h
nonlinear_optimizer/utility_tests/: CMakeLists.txt  simd_helper_performance_test.cc  simd_helper_test.cc
optimizer/: types.h
results/: maha_3_vs_6_amd64.txt  maha_3_vs_6_arm.txt  maha_amd64.txt  maha_amd64_simple.txt  maha_arm_simple.txt  reproj_amd64.txt  reproj_arm.txt
